--- a/tests/integration/specs/rgr_route_teardown.toml
+++ b/tests/integration/specs/rgr_route_teardown.toml
@@ -6,7 +6,7 @@ actions = [ "Add_Source node7 node25 1 64 8000 1000",
 width = 300.0
 height = 300.0
 [protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.7
 
@@ -26,7 +26,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node8.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.7
 
@@ -56,7 +56,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node10.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.7
 
@@ -86,7 +86,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node17.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.7
 
@@ -116,7 +116,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node24.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.7
 
@@ -146,7 +146,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node25.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.7
 
@@ -176,7 +176,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node23.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.7
 
@@ -206,7 +206,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node2.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.7
 
@@ -236,7 +236,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node18.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.7
 
@@ -266,7 +266,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node3.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.7
 
@@ -296,7 +296,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node15.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.7
 
@@ -326,7 +326,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node6.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.7
 
@@ -356,7 +356,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node20.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.7
 
@@ -386,7 +386,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node1.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.7
 
@@ -416,7 +416,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node9.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.7
 
@@ -446,7 +446,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node4.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.7
 
@@ -476,7 +476,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node13.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.7
 
@@ -506,7 +506,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node14.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.7
 
@@ -536,7 +536,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node16.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.7
 
@@ -566,7 +566,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node21.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.7
 
@@ -596,7 +596,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node22.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.7
 
@@ -626,7 +626,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node12.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.7
 
@@ -656,7 +656,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node5.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.7
 
@@ -686,7 +686,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node7.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.7
 
@@ -716,7 +716,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node11.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.7
 
@@ -746,7 +746,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node19.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.7
 
