--- a/tests/integration/specs/CBR.toml
+++ b/tests/integration/specs/CBR.toml
@@ -8,7 +8,7 @@ height = 200
 #AddSource source destination Packets_Per_Sec Packet_Size duration start_time
 actions = [ "Add_Source node1 node3 3 32 5000 1000"]
 [protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node1]
     worker_name = "node1"
@@ -19,7 +19,7 @@ Protocol = "NaiveRouting"
         x = -60.0
         y = 0.0
     [initial_nodes.node1.protocol]
-        Protocol="NaiveRouting"
+        Protocol="Flooding"
     [initial_nodes.node1.velocity]
         x = 0.0
         y = 0.0
@@ -37,7 +37,7 @@ Protocol = "NaiveRouting"
         x = 0.0
         y = 0.0
     [initial_nodes.node2.protocol]
-        Protocol="NaiveRouting"
+        Protocol="Flooding"
     [initial_nodes.node2.velocity]
         x = 0.0
         y = 0.0
@@ -54,7 +54,7 @@ Protocol = "NaiveRouting"
         x = 60.0
         y = 0.0
     [initial_nodes.node3.protocol]
-        Protocol="NaiveRouting"
+        Protocol="Flooding"
     [initial_nodes.node3.velocity]
         x = 0.0
         y = 0.0
