--- a/tests/integration/specs/killnode.toml
+++ b/tests/integration/specs/killnode.toml
@@ -6,7 +6,7 @@ width = 200
 height = 200
 actions = ["Kill_Node node2 500"]
 [protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node1]
     worker_name = "node1"
@@ -20,7 +20,7 @@ Protocol = "NaiveRouting"
         x = 0.0
         y = 0.0
     [initial_nodes.node1.protocol]
-        Protocol = "NaiveRouting"
+        Protocol = "Flooding"
     [initial_nodes.node1.radio_short]
         reliability = 1.0
         interface_name = "wlan0"
@@ -42,7 +42,7 @@ Protocol = "NaiveRouting"
         x = 0.0
         y = 0.0
     [initial_nodes.node2.protocol]
-            Protocol = "NaiveRouting"
+            Protocol = "Flooding"
     [initial_nodes.node2.radio_short] #Short-range radio
         reliability = 1 #Not used in device_mode
         interface_name = "wlan0" #Not used in simulated_mode
@@ -64,7 +64,7 @@ Protocol = "NaiveRouting"
         x = 0.0
         y = 0.0
     [initial_nodes.node3.protocol]
-                Protocol = "NaiveRouting"
+                Protocol = "Flooding"
     [initial_nodes.node3.radio_short] #Short-range radio
         reliability = 1 #Not used in device_mode
         interface_name = "wlan0" #Not used in simulated_mode
