--- a/tests/integration/specs/radio_broadcast_timing.toml
+++ b/tests/integration/specs/radio_broadcast_timing.toml
@@ -4,7 +4,7 @@ width = 200 #Not used in this test
 height = 200 #Not used in this test
 actions = ["ping node1 node5 1000 "]
 [protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node1]
     worker_name = "node1"
@@ -18,7 +18,7 @@ Protocol = "NaiveRouting"
         x = 0.0
         y = 0.0
     [initial_nodes.node1.protocol]
-        Protocol = "NaiveRouting"
+        Protocol = "Flooding"
     [initial_nodes.node1.radio_short]
         reliability = 1.0
         interface_name = "wlan0"
@@ -36,7 +36,7 @@ Protocol = "NaiveRouting"
         x = 0.0
         y = 0.0
     [initial_nodes.node2.protocol]
-            Protocol = "NaiveRouting"
+            Protocol = "Flooding"
     [initial_nodes.node2.radio_short]
         reliability = 1 
         interface_name = "wlan0" 
@@ -55,7 +55,7 @@ Protocol = "NaiveRouting"
         x = 0.0
         y = 0.0
     [initial_nodes.node3.protocol]
-            Protocol = "NaiveRouting"
+            Protocol = "Flooding"
     [initial_nodes.node3.radio_short]
         reliability = 1 
         range = 100.0
@@ -73,7 +73,7 @@ Protocol = "NaiveRouting"
         x = 0.0
         y = 0.0
     [initial_nodes.node4.protocol]
-            Protocol = "NaiveRouting"
+            Protocol = "Flooding"
     [initial_nodes.node4.radio_short]
         reliability = 1 
         range = 100.0
@@ -91,7 +91,7 @@ Protocol = "NaiveRouting"
         x = 0.0
         y = 0.0
     [initial_nodes.node5.protocol]
-            Protocol = "NaiveRouting"
+            Protocol = "Flooding"
     [initial_nodes.node5.radio_short]
         reliability = 1 
         range = 100.0
