--- a/tests/integration/specs/rgrI_route_discovery_optimization.toml
+++ b/tests/integration/specs/rgrI_route_discovery_optimization.toml
@@ -16,7 +16,7 @@ actions = ["Add_Source node21 node43 1 64 8000 1000",
 width = 400.0
 height = 400.0
 [protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.7
 
@@ -36,7 +36,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node22.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -66,7 +66,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node42.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -96,7 +96,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node26.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -126,7 +126,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node63.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -156,7 +156,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node4.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -186,7 +186,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node39.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -216,7 +216,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node66.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -246,7 +246,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node80.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -276,7 +276,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node55.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -306,7 +306,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node6.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -336,7 +336,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node17.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -366,7 +366,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node20.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -396,7 +396,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node28.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -426,7 +426,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node73.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -456,7 +456,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node30.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -486,7 +486,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node37.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -516,7 +516,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node16.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -546,7 +546,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node50.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -576,7 +576,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node27.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -606,7 +606,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node10.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -636,7 +636,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node19.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -666,7 +666,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node46.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -696,7 +696,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node29.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -726,7 +726,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node48.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -756,7 +756,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node72.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -786,7 +786,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node8.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -816,7 +816,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node47.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -846,7 +846,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node71.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -876,7 +876,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node57.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -906,7 +906,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node15.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -936,7 +936,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node23.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -966,7 +966,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node44.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -996,7 +996,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node53.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -1026,7 +1026,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node5.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -1056,7 +1056,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node7.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -1086,7 +1086,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node25.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -1116,7 +1116,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node36.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -1146,7 +1146,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node59.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -1176,7 +1176,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node49.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -1206,7 +1206,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node69.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -1236,7 +1236,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node81.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -1266,7 +1266,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node9.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -1296,7 +1296,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node38.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -1326,7 +1326,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node43.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -1356,7 +1356,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node24.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -1386,7 +1386,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node76.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -1416,7 +1416,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node56.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -1446,7 +1446,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node79.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -1476,7 +1476,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node41.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -1506,7 +1506,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node2.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -1536,7 +1536,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node58.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -1566,7 +1566,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node11.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -1596,7 +1596,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node12.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -1626,7 +1626,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node13.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -1656,7 +1656,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node3.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -1686,7 +1686,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node33.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -1716,7 +1716,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node35.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -1746,7 +1746,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node51.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -1776,7 +1776,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node78.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -1806,7 +1806,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node54.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -1836,7 +1836,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node45.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -1866,7 +1866,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node64.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -1896,7 +1896,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node67.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -1926,7 +1926,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node52.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -1956,7 +1956,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node31.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -1986,7 +1986,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node65.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -2016,7 +2016,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node60.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -2046,7 +2046,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node62.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -2076,7 +2076,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node74.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -2106,7 +2106,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node61.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -2136,7 +2136,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node1.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -2166,7 +2166,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node68.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -2196,7 +2196,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node18.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -2226,7 +2226,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node21.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -2256,7 +2256,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node32.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -2286,7 +2286,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node40.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -2316,7 +2316,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node70.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -2346,7 +2346,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node14.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -2376,7 +2376,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node34.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -2406,7 +2406,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node75.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
@@ -2436,7 +2436,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node77.protocol]
-Protocol = "ReactiveGossip"
+Protocol = "RGR"
 k = 2
 p = 0.5
 
