--- a/tests/integration/specs/route_discovery/naive_route_discovery.toml
+++ b/tests/integration/specs/route_discovery/naive_route_discovery.toml
@@ -28,7 +28,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node44.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node44.radio_short]
 reliability = 1.0
@@ -56,7 +56,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node49.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node49.radio_short]
 reliability = 1.0
@@ -84,7 +84,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node5.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node5.radio_short]
 reliability = 1.0
@@ -112,7 +112,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node17.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node17.radio_short]
 reliability = 1.0
@@ -140,7 +140,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node26.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node26.radio_short]
 reliability = 1.0
@@ -168,7 +168,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node34.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node34.radio_short]
 reliability = 1.0
@@ -196,7 +196,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node54.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node54.radio_short]
 reliability = 1.0
@@ -224,7 +224,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node59.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node59.radio_short]
 reliability = 1.0
@@ -252,7 +252,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node37.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node37.radio_short]
 reliability = 1.0
@@ -280,7 +280,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node60.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node60.radio_short]
 reliability = 1.0
@@ -308,7 +308,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node8.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node8.radio_short]
 reliability = 1.0
@@ -336,7 +336,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node64.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node64.radio_short]
 reliability = 1.0
@@ -364,7 +364,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node11.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node11.radio_short]
 reliability = 1.0
@@ -392,7 +392,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node73.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node73.radio_short]
 reliability = 1.0
@@ -420,7 +420,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node12.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node12.radio_short]
 reliability = 1.0
@@ -448,7 +448,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node22.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node22.radio_short]
 reliability = 1.0
@@ -476,7 +476,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node36.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node36.radio_short]
 reliability = 1.0
@@ -504,7 +504,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node55.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node55.radio_short]
 reliability = 1.0
@@ -532,7 +532,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node2.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node2.radio_short]
 reliability = 1.0
@@ -560,7 +560,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node24.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node24.radio_short]
 reliability = 1.0
@@ -588,7 +588,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node51.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node51.radio_short]
 reliability = 1.0
@@ -616,7 +616,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node53.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node53.radio_short]
 reliability = 1.0
@@ -644,7 +644,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node63.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node63.radio_short]
 reliability = 1.0
@@ -672,7 +672,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node66.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node66.radio_short]
 reliability = 1.0
@@ -700,7 +700,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node75.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node75.radio_short]
 reliability = 1.0
@@ -728,7 +728,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node79.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node79.radio_short]
 reliability = 1.0
@@ -756,7 +756,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node81.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node81.radio_short]
 reliability = 1.0
@@ -784,7 +784,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node85.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node85.radio_short]
 reliability = 1.0
@@ -812,7 +812,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node9.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node9.radio_short]
 reliability = 1.0
@@ -840,7 +840,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node62.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node62.radio_short]
 reliability = 1.0
@@ -868,7 +868,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node20.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node20.radio_short]
 reliability = 1.0
@@ -896,7 +896,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node89.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node89.radio_short]
 reliability = 1.0
@@ -924,7 +924,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node10.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node10.radio_short]
 reliability = 1.0
@@ -952,7 +952,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node65.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node65.radio_short]
 reliability = 1.0
@@ -980,7 +980,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node90.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node90.radio_short]
 reliability = 1.0
@@ -1008,7 +1008,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node86.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node86.radio_short]
 reliability = 1.0
@@ -1036,7 +1036,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node94.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node94.radio_short]
 reliability = 1.0
@@ -1064,7 +1064,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node100.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node100.radio_short]
 reliability = 1.0
@@ -1092,7 +1092,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node16.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node16.radio_short]
 reliability = 1.0
@@ -1120,7 +1120,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node57.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node57.radio_short]
 reliability = 1.0
@@ -1148,7 +1148,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node15.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node15.radio_short]
 reliability = 1.0
@@ -1176,7 +1176,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node1.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node1.radio_short]
 reliability = 1.0
@@ -1204,7 +1204,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node21.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node21.radio_short]
 reliability = 1.0
@@ -1232,7 +1232,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node82.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node82.radio_short]
 reliability = 1.0
@@ -1260,7 +1260,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node23.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node23.radio_short]
 reliability = 1.0
@@ -1288,7 +1288,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node97.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node97.radio_short]
 reliability = 1.0
@@ -1316,7 +1316,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node92.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node92.radio_short]
 reliability = 1.0
@@ -1344,7 +1344,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node4.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node4.radio_short]
 reliability = 1.0
@@ -1372,7 +1372,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node91.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node91.radio_short]
 reliability = 1.0
@@ -1400,7 +1400,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node39.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node39.radio_short]
 reliability = 1.0
@@ -1428,7 +1428,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node25.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node25.radio_short]
 reliability = 1.0
@@ -1456,7 +1456,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node70.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node70.radio_short]
 reliability = 1.0
@@ -1484,7 +1484,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node67.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node67.radio_short]
 reliability = 1.0
@@ -1512,7 +1512,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node40.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node40.radio_short]
 reliability = 1.0
@@ -1540,7 +1540,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node50.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node50.radio_short]
 reliability = 1.0
@@ -1568,7 +1568,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node35.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node35.radio_short]
 reliability = 1.0
@@ -1596,7 +1596,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node80.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node80.radio_short]
 reliability = 1.0
@@ -1624,7 +1624,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node19.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node19.radio_short]
 reliability = 1.0
@@ -1652,7 +1652,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node56.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node56.radio_short]
 reliability = 1.0
@@ -1680,7 +1680,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node38.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node38.radio_short]
 reliability = 1.0
@@ -1708,7 +1708,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node61.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node61.radio_short]
 reliability = 1.0
@@ -1736,7 +1736,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node43.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node43.radio_short]
 reliability = 1.0
@@ -1764,7 +1764,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node46.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node46.radio_short]
 reliability = 1.0
@@ -1792,7 +1792,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node18.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node18.radio_short]
 reliability = 1.0
@@ -1820,7 +1820,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node14.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node14.radio_short]
 reliability = 1.0
@@ -1848,7 +1848,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node27.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node27.radio_short]
 reliability = 1.0
@@ -1876,7 +1876,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node74.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node74.radio_short]
 reliability = 1.0
@@ -1904,7 +1904,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node13.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node13.radio_short]
 reliability = 1.0
@@ -1932,7 +1932,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node6.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node6.radio_short]
 reliability = 1.0
@@ -1960,7 +1960,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node52.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node52.radio_short]
 reliability = 1.0
@@ -1988,7 +1988,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node72.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node72.radio_short]
 reliability = 1.0
@@ -2016,7 +2016,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node87.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node87.radio_short]
 reliability = 1.0
@@ -2044,7 +2044,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node3.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node3.radio_short]
 reliability = 1.0
@@ -2072,7 +2072,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node28.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node28.radio_short]
 reliability = 1.0
@@ -2100,7 +2100,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node88.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node88.radio_short]
 reliability = 1.0
@@ -2128,7 +2128,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node96.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node96.radio_short]
 reliability = 1.0
@@ -2156,7 +2156,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node83.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node83.radio_short]
 reliability = 1.0
@@ -2184,7 +2184,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node32.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node32.radio_short]
 reliability = 1.0
@@ -2212,7 +2212,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node45.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node45.radio_short]
 reliability = 1.0
@@ -2240,7 +2240,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node69.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node69.radio_short]
 reliability = 1.0
@@ -2268,7 +2268,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node71.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node71.radio_short]
 reliability = 1.0
@@ -2296,7 +2296,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node98.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node98.radio_short]
 reliability = 1.0
@@ -2324,7 +2324,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node99.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node99.radio_short]
 reliability = 1.0
@@ -2352,7 +2352,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node78.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node78.radio_short]
 reliability = 1.0
@@ -2380,7 +2380,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node58.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node58.radio_short]
 reliability = 1.0
@@ -2408,7 +2408,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node33.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node33.radio_short]
 reliability = 1.0
@@ -2436,7 +2436,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node29.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node29.radio_short]
 reliability = 1.0
@@ -2464,7 +2464,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node68.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node68.radio_short]
 reliability = 1.0
@@ -2492,7 +2492,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node95.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node95.radio_short]
 reliability = 1.0
@@ -2520,7 +2520,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node84.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node84.radio_short]
 reliability = 1.0
@@ -2548,7 +2548,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node77.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node77.radio_short]
 reliability = 1.0
@@ -2576,7 +2576,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node31.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node31.radio_short]
 reliability = 1.0
@@ -2604,7 +2604,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node48.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node48.radio_short]
 reliability = 1.0
@@ -2632,7 +2632,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node7.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node7.radio_short]
 reliability = 1.0
@@ -2660,7 +2660,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node93.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node93.radio_short]
 reliability = 1.0
@@ -2688,7 +2688,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node41.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node41.radio_short]
 reliability = 1.0
@@ -2716,7 +2716,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node47.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node47.radio_short]
 reliability = 1.0
@@ -2744,7 +2744,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node76.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node76.radio_short]
 reliability = 1.0
@@ -2772,7 +2772,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node30.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node30.radio_short]
 reliability = 1.0
@@ -2800,7 +2800,7 @@ x = 0.0
 y = 0.0
 
 [initial_nodes.node42.protocol]
-Protocol = "NaiveRouting"
+Protocol = "Flooding"
 
 [initial_nodes.node42.radio_short]
 reliability = 1.0
