--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ diesel = { version = "1.4.3", features = ["postgres", "numeric"] }
 dotenv = "0.15.0"
 strfmt = "0.1.6"
 diesel_migrations = "1.4.0"
+crossbeam-channel = "0.5.0"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 linux-embedded-hal = "0.2.2"
