--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,6 +45,7 @@ dotenv = "0.15.0"
 strfmt = "0.1.6"
 diesel_migrations = "1.4.0"
 crossbeam-channel = "0.5.0"
+sysinfo = "0.15.6"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 linux-embedded-hal = "0.2.2"
