--- a/tests/integration/specs/CBR.toml
+++ b/tests/integration/specs/CBR.toml
@@ -7,6 +7,7 @@ width = 200
 height = 200
 #AddSource source destination Packets_Per_Sec Packet_Size duration start_time
 actions = [ "Add_Source node1 node3 3 32 5000 1000"]
+random_seed = 12345
 [protocol]
 Protocol = "Flooding"
 
