--- a/tests/integration/specs/aodv_rerr.toml
+++ b/tests/integration/specs/aodv_rerr.toml
@@ -7,6 +7,7 @@ actions = [ "Ping node1 node5 1000",
         ]
 width = 200.0
 height = 200.0
+random_seed = 12345
 [protocol]
 Protocol = "AODV"
 active_route_timeout = 3000
