--- a/tests/integration/specs/gossip_basic.toml
+++ b/tests/integration/specs/gossip_basic.toml
@@ -3,6 +3,7 @@ duration = 3000
 actions = [ "Ping node1 node25 1000"]
 width = 300.0
 height = 300.0
+random_seed = 12345
 [protocol]
 Protocol = "Gossip"
 k = 2
