--- a/tests/integration/specs/radio_broadcast_timing.toml
+++ b/tests/integration/specs/radio_broadcast_timing.toml
@@ -3,6 +3,7 @@ duration = 2000
 width = 200 #Not used in this test
 height = 200 #Not used in this test
 actions = ["ping node1 node5 1000 "]
+random_seed = 12345
 [protocol]
 Protocol = "Flooding"
 
