Fixed for the Radio implementation of LoraRadio
Also added minor fixes to AODVDA specs

--- a/tests/integration/specs/aodvda_basic.toml
+++ b/tests/integration/specs/aodvda_basic.toml
@@ -13,6 +13,7 @@ net_diameter =  15
 node_traversal_time = 40
 allowed_hello_loss = 2
 rreq_retries = 2
+algorithm = 1
 
 [initial_nodes.node2]
 worker_name = "node2"
